--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body class="flex flex-col items-center py-12 px-6">
  <div class="flex flex-col items-center mb-10 text-center">
-    <img src="https://cdn.discordapp.com/attachments/1444448785936679143/1450529153555234836/ODEDSVR.webp?ex=6942de0b&is=69418c8b&hm=59d320c78fd4793dedf1d190aeedc78a5984d3480ce601d026370ebbf19de9a9&" alt="ODED SVR Logo" class="w-32 h-32 rounded-full profile-border mx-auto mb-4">
+    <img src="https://files.kick.com/images/user/8436488/profile_image/conversion/16481ec1-a8fe-4087-9bea-a792a7e2d20c-fullsize.webp">
     <div class="flex flex-col items-center mb-10 text-center">
         <h1 class="text-5xl font-black text-white drop-shadow-lg italic tracking-tighter uppercase">ODED SVR</h1>
         <div class="bg-white/30 backdrop-blur-sm px-4 py-1 rounded-full mt-3">
@@ -85,6 +85,7 @@
 
 </body>
 </html>
+
 
 
 
