--- a/index.html
+++ b/index.html
@@ -1,95 +1,160 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODED SVR - Links</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap');
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ODED SVR | Official Links</title>
 
-        body {
-            font-family: 'Heebo', sans-serif;
-            background: linear-gradient(135deg, #70a077 0%, #7fc29b 50%, #639db6 100%); /* Adjusted for more green */
-            min-height: 100vh;
-        }
-        .glass {
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
-        }
-        .profile-border {
-            border: 6px solid white;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-        }
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap');
+
+    body {
+      font-family: 'Heebo', sans-serif;
+      background:
+        radial-gradient(circle at top, #1f2933, #020617 70%);
+      min-height: 100vh;
+    }
+
+    .card {
+      background: linear-gradient(145deg, #0f172a, #020617);
+      border: 1px solid rgba(255,255,255,0.08);
+      box-shadow:
+        0 0 0 rgba(0,0,0,0),
+        0 10px 30px rgba(0,0,0,0.6);
+      transition: all .25s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px) scale(1.01);
+      box-shadow:
+        0 0 25px rgba(59,130,246,.35),
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    .neon {
+      text-shadow: 0 0 12px rgba(255,255,255,.35);
+    }
+
+    #kick-link:hover {
+      box-shadow:
+        0 0 25px rgba(34,197,94,.35), /* Green glow */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #awards-link:hover {
+      box-shadow:
+        0 0 25px rgba(249,115,22,.35), /* Orange glow (Streamer of the Year) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #ban-link:hover {
+      box-shadow:
+        0 0 25px rgba(220,38,38,.35), /* Red glow (Ban Appeal) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #discord-link:hover {
+      box-shadow:
+        0 0 25px rgba(99,102,241,.35), /* Blue/Indigo glow (Discord) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #libero-link:hover {
+      box-shadow:
+        0 0 25px rgba(168,85,247,.35), /* Purple glow (Libero) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #youtube-link:hover {
+      box-shadow:
+        0 0 25px rgba(239,68,68,.35), /* Red glow (YouTube) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #rgg-link:hover {
+      box-shadow:
+        0 0 25px rgba(59,130,246,.35), /* Blue glow (RGG) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+
+    #instagram-link:hover {
+      box-shadow:
+        0 0 25px rgba(255,0,128,.35), /* Vibrant Pink/Fuchsia glow (Instagram) */
+        0 20px 50px rgba(0,0,0,.8);
+    }
+  </style>
 </head>
-<body class="flex flex-col items-center py-12 px-6">
- <div class="flex flex-col items-center mb-10 text-center">
-    <img src="https://github.com/OdedSVR/images/blob/main/ODEDSVR.jpeg?raw=true" class="rounded-full w-40 h-40 object-cover profile-border mb-4">
-    <div class="flex flex-col items-center mb-10 text-center">
-        <h1 class="text-5xl font-black text-white drop-shadow-lg italic tracking-tighter uppercase">ODED SVR</h1>
-    <footer class= class="mt-2 text-white/80 font-bold text-sm"> © 2025 OdedSVR | Created by Piker</footer>
-        <div class="bg-white/30 backdrop-blur-sm px-4 py-1 rounded-full mt-3">
-            <p class="text-white font-bold text-sm tracking-widest">OFFICIAL LINKS</p>
-        </div>
-    </div>
-    <div class="w-full max-w-md space-y-5 mx-auto">
-        <a href="https://awards.shotist.net/vote" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-orange-500 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-              <span class="text-xl font-black text-white tracking-wide">🏆🎥</span><span class="text-xl font-black text-gray-800 tracking-wide">תצביעו לעודד כסטרימר השנה!</span>
-                        <p class="text-xs font-black text-orange-500 tracking-wide">תצביעו לו בחייאת אמא שלכם הוא מקדיש לכם לייבים של 14 שעות כמעט כל יום</p>
-        </a>
-        <a href="https://kick.com/odedsvr" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-green-600 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-green-600 tracking-wide">🟢</span><span class="text-xl font-black text-gray-800 tracking-wide"> Kick - לייבים</span>
-        </a>
 
-        <a href="https://forms.gle/uRaRfwD6EmEeJv887" target="_blank" class="glass block w-full p-5 rounded-3xl border-b-8 border-yellow-500 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">📝 ערעור על באן</span>
-            <p class="text-xs text-red-600 font-bold mt-1">לא יכולים לכתוב בצ'אט? כנסו לכאן</p>
-        </a>
+<body class="flex flex-col items-center px-6 py-14">
 
-        <a href="https://discord.gg/4T83uTNaju" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-indigo-600 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">👾 הדיסקורד הרשמי</span>
-        </a>
+  <!-- PROFILE -->
+  <div class="text-center mb-12">
+    <img
+      src="https://github.com/OdedSVR/images/blob/main/ODEDSVR.jpeg?raw=true"
+      class="w-36 h-36 rounded-full mx-auto border-4 border-white/20 shadow-2xl mb-5 object-cover">
 
-        <a href="https://libero-il.co.il/" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-purple-500 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">💎 LIBERO - בשמים</span>
-            <div class="flex flex-wrap justify-center gap-1 mt-2">
-                <span class="bg-purple-100 text-purple-800 text-[10px] font-black py-1 px-2 rounded">OSVR10 - 10% הנחה על כלל האתר</span>
-                <span class="bg-purple-100 text-purple-800 text-[10px] font-black py-1 px-2 rounded">OSVR - שתיים עשרה פרפיום + נויה מתנה </span>
-                <span class="bg-purple-100 text-purple-800 text-[10px] font-black py-1 px-2 rounded">OSVR+1 - מיגל מרה + טסטר חינם</span>
-            </div>
-        </a>
+    <h1 class="text-5xl font-black text-white neon tracking-tight uppercase">
+      ODED SVR
+    </h1>
 
-        <a href="https://www.youtube.com/@odedsvr95" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-red-600 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">🎥 YouTube - הערוץ הרשמי</span>
-        </a>
+    <p class="mt-2 text-sm text-white/60 font-bold tracking-widest">
+      OFFICIAL LINKS
+    </p>
 
-        <a href="https://rggplay.com/?ref=RGG-8764e9784" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-blue-500 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">🎮 RGG PLAY</span>
-            <p class="text-xs text-blue-600 font-black mt-1">קוד: ODEDSVR</p>
-        </a>
+    <footer class="mt-3 text-xs text-white/40 font-bold">
+      © 2025 OdedSVR | Created by Piker
+    </footer>
+  </div>
 
-        <a href="https://www.instagram.com/odedsvr/" target="_blank" class="glass block w-full p-5 rounded-3xl shadow-xl border-b-8 border-pink-500 text-center transition-all hover:-translate-y-1 hover:brightness-105 active:scale-95">
-            <span class="text-xl font-black text-gray-800 tracking-wide">📸 Instagram - עדכונים בסטורי</span>
-        </a>
+  <!-- LINKS -->
+  <div class="w-full max-w-md space-y-4 mx-auto">
 
-    </div>
+    <a href="https://awards.shotist.net/vote" target="_blank" id="awards-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-2xl font-black text-white">🏆🎥 תצביעו לעודד כסטרימר השנה!</div>
+      <p class="mt-1 text-xs text-orange-400 font-bold">
+       לייבים ארוכים כמעט כל יום - תראו אהבה
+      </p>
+    </a>
+
+    <a href="https://kick.com/odedsvr" target="_blank" id="kick-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-green-400"><img src="https://github.com/OdedSVR/images/blob/main/kick%20logo.png?raw=true" alt="Kick Logo" class="inline-block h-8 w-8 align-middle mr-2"> Kick – לייבים</div>
+    </a>
+
+    <a href="https://forms.gle/uRaRfwD6EmEeJv887" target="_blank" id="ban-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-white">📝 ערעור על באן</div>
+      <p class="text-xs text-red-400 font-bold mt-1">
+        לא יכולים לכתוב בצ'אט?
+      </p>
+    </a>
+
+    <a href="https://discord.gg/4T83uTNaju" target="_blank" id="discord-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-indigo-400"><img src="https://github.com/OdedSVR/images/blob/main/discor%20logo.png?raw=true" alt="Discord Logo" class="inline-block h-10 w-10 align-middle mr-2"> הדיסקורד הרשמי</div>
+    </a>
+
+    <a href="https://libero-il.co.il/" target="_blank" id="libero-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-purple-400">💎 LIBERO – בשמים</div>
+      <div class="mt-2 flex justify-center">
+        <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-1 py-0.5 rounded-full">OSVR10 - 10% הנחה על כלל האתר</span>
+        <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-1 py-0.5 rounded-full">OSVR - שתיים עשרה פרפיום + נויה מתנה</span>
+        <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-1 py-0.5 rounded-full">OSVR+1 - מיגל מרה + טסטר חינם</span>
+      </div>
+    </a>
+
+    <a href="https://www.youtube.com/@odedsvr95" target="_blank" id="youtube-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-red-400"><img src="https://github.com/OdedSVR/images/blob/main/YTLOGO.png?raw=true" alt="YouTube Logo" class="inline-block h-8 w-8 align-middle mr-2"> YouTube – הערוץ הרשמי</div>
+    </a>
+
+    <a href="https://rggplay.com/?ref=RGG-8764e9784" target="_blank" id="rgg-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-blue-400">🎮 RGG PLAY</div>
+      <p class="mt-1 text-xs text-blue-300 font-bold">קוד: ODEDSVR</p>
+    </a>
+
+    <a href="https://www.instagram.com/odedsvr/" target="_blank" id="instagram-link" class="card block rounded-2xl p-5 text-center">
+      <div class="text-xl font-black text-pink-400"><img src="https://github.com/OdedSVR/images/blob/main/instlogo.png?raw=true" alt="Instagram Logo" class="inline-block h-8 w-8 align-middle mr-2"> Instagram – סטוריז</div>
+    </a>
+
+  </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
