--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="w-full max-w-md space-y-4 mx-auto">
 
     <a href="https://awards.shotist.net/vote" target="_blank" id="awards-link" class="card block rounded-2xl p-5 text-center">
-      <div class="text-2xl font-black text-white">🏆🎥 תצביעו לעודד כסטרימר השנה!</div>
+      <div class="text-2xl font-black text-white"> תצביעו לעודד כסטרימר השנה!</div>
       <p class="mt-1 text-xs text-orange-400 font-bold">
        לייבים ארוכים כמעט כל יום - תראו אהבה
       </p>
@@ -158,5 +158,6 @@
   </div>
 </body>
 </html>
+
 
 
