--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="w-full max-w-md space-y-4 mx-auto">
 
     <a href="https://awards.shotist.net/vote" target="_blank" id="awards-link" class="card block rounded-2xl p-5 text-center">
-      <div class="text-2xl font-black text-orange-400">🏆🎥 תצביעו לעודד כסטרימר השנה!</div>
+      <div class="text-2xl font-black text-orange-400"> תצביעו לעודד כסטרימר השנה!</div>
       <p class="mt-1 text-xs text-orange-300 font-bold">
        לייבים ארוכים כמעט כל יום - תראו אהבה
       </p>
@@ -152,9 +152,10 @@
     </a>
 
     <a href="https://www.instagram.com/odedsvr/" target="_blank" id="instagram-link" class="card block rounded-2xl p-5 text-center">
-      <div class="text-xl font-black text-pink-400"><img src="https://github.com/OdedSVR/images/blob/main/instlogo.png?raw=true" alt="Instagram Logo" class="inline-block h-6 w-6 align-middle mr-2"> Instagram – סטוריז</div>
+      <div class="text-xl font-black text-pink-400"><img src="https://github.com/OdedSVR/images/blob/main/instlogo.png?raw=true" alt="Instagram Logo" class="inline-block h-6 w-6 align-middle mr-2"> עדכונים בסטורי</div>
     </a>
 
   </div>
 </body>
 </html>
+
