--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@
       <p class="mt-2 text-sm text-white/60 font-bold tracking-widest">
         OFFICIAL LINKS
       </p>
-
-      <footer class="mt-3 text-xs text-white/40 font-bold">
-        © 2025 OdedSVR | Created by Piker
-      </footer>
     </div>
 
     <!-- LINKS -->
@@ -231,6 +227,9 @@
       </a>
 
     </div>
+    <footer class="mt-3 text-xs text-white/40 font-bold text-center w-full max-w-md mx-auto mt-8">
+      © 2025 OdedSVR | Created by Piker
+    </footer>
   </div>
 
   <script>
@@ -245,4 +244,3 @@
   </script>
 </body>
 </html>
-
