--- a/index.html
+++ b/index.html
@@ -147,8 +147,17 @@
       100% { opacity: 0; visibility: hidden; } /* Fade out over the remaining 30% */
     }
 
-    /* Ensure main content is hidden until splash screen is done */
-    body:not(.loaded) > .flex.flex-col.items-center { display: none; } /* Added for Colab compatibility */
+    /* Main content styling for smooth fade-in */
+    #main-page-content {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.7s ease-in;
+    }
+
+    #main-page-content.visible {
+      opacity: 1;
+      visibility: visible;
+    }
   </style>
 </head>
 
@@ -161,7 +170,7 @@
       class="splash-logo">
   </div>
 
-  <div class="flex flex-col items-center px-6 py-14">
+  <div id="main-page-content" class="flex flex-col items-center px-6 py-14">
 
     <!-- PROFILE -->
     <div class="text-center mb-12">
@@ -235,10 +244,12 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const splashScreen = document.getElementById('splash-screen');
+      const mainPageContent = document.getElementById('main-page-content');
+
       // Listen for the end of the fadeOutSplash animation
       splashScreen.addEventListener('animationend', function() {
-        document.body.classList.add('loaded'); // Add 'loaded' class to body
         splashScreen.style.display = 'none'; // Hide splash screen completely after fade
+        mainPageContent.classList.add('visible'); // Make main content visible and trigger its fade-in
       });
     });
   </script>
