--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           <img src="https://github.com/OdedSVR/images/blob/main/kick%20logo.png?raw=true" alt="Kick" class="inline-block h-8 w-8 align-middle mr-2"> 
           Kick – לייבים
         </div>
+        <p class="mt-1 text-xs text-green-300 font-bold">(שלישי , רביעי , שישי , שבת)</p>
       </a>
       
        <a href="https://forms.gle/uRaRfwD6EmEeJv887" target="_blank" class="card block rounded-2xl p-5 text-center">
@@ -188,5 +189,6 @@
   </script>
 </body>
 </html>
+
 
 
