--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
           <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR10 - הנחה על כל האתר 10%</span>
           <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR - סדרת 12 פרפיום + נויה מתנה</span>
           <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR+1 - מיגל מרה + טסטר חינם</span>
+          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">SVR1+1 - אל חרמין אראביאן טרזור + אל חרמין הרמין טרזור </span>
         </div>
       </a>
 
@@ -231,3 +232,4 @@
   </script>
 </body>
 </html>
+
