--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
 
     <footer class="mt-16 text-xs text-white/40 font-bold text-center">
-      © 2025 OdedSVR | Created by Piker
+      © 2025 OdedSVR
     </footer>
   </div>
 
@@ -232,4 +232,5 @@
   </script>
 </body>
 </html>
+
 
