--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
         <div class="text-xl font-black text-purple-400 mb-2">💎 LIBERO</div>
         <div class="flex flex-wrap justify-center gap-2">
           <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR10 - הנחה על כל האתר 10%</span>
-                    <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR- ארבע בשמי אייאסאמאר בהנחה (ASMR)</span>
+          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR- Maie Piou 1+1</span>
+          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR- ASMR 2+2</span>
         </div>
       </a>
 
@@ -242,4 +243,5 @@
   </script>
 </body>
 </html>
+
 
