--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         <div class="text-xl font-black text-purple-400 mb-2">💎 LIBERO</div>
         <div class="flex flex-wrap justify-center gap-2">
           <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR10 - הנחה על כל האתר 10%</span>
-          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR- Maie Piou 1+1 מתנה!</span>
-          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg">OSVR- ASMR 2+2 מתנה!</span>
+          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg"> מתנה! OSVR- Maie Piou 1+1</span>
+          <span class="bg-white/10 text-purple-200 text-[10px] font-bold px-2 py-1 rounded-lg"> מתנה! OSVR- ASMR 2+2</span>
         </div>
       </a>
 
@@ -243,6 +243,7 @@
   </script>
 </body>
 </html>
+
 
 
 
