--- a/index.html
+++ b/index.html
@@ -79,12 +79,17 @@
       box-shadow: 0 0 25px rgba(129, 140, 248, 0.5), 0 20px 50px rgba(0,0,0,.8);
       border-color: rgba(129, 140, 248, 0.4);
     }
-/*
+
+    .card-pink:hover {
+      box-shadow: 0 0 25px rgba(255, 192, 203, 0.5), 0 20px 50px rgba(0,0,0,.8);
+      border-color: rgba(255, 192, 203, 0.4);
+    }
+
     .card-libero:hover {
       box-shadow: 0 0 25px rgba(192, 132, 252, 0.5), 0 20px 50px rgba(0,0,0,.8);
       border-color: rgba(192, 132, 252, 0.4);
     }
-*/
+    
     .card-insta:hover {
       box-shadow: 0 0 25px rgba(244, 114, 182, 0.5), 0 20px 50px rgba(0,0,0,.8);
       border-color: rgba(244, 114, 182, 0.4);
@@ -159,6 +164,11 @@
                   <span class="text-yellow-300 text-[10px] font-bold px-2 py-1 rounded-lg">לחצו כאן להרשמה</span>
       </a>
 
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaHZPxcokcBjHytidZ-Uv16gZh_ennrWugAk3Mz18CUP3y4A/viewform" target="_blank" class="card card-pink block rounded-2xl p-5 text-center">
+        <div class="text-xl font-black text-pink-400">🎥 ?רוצים לנהל את הערוץ יוטיוב של אבני 🎥</div>
+        <span class="text-pink-300 text-[10px] font-bold px-2 py-1 rounded-lg">!אבני מתגייס ומחפש מישהו שינהל את הערוץ שלו, לחצו להרשמה</span>
+      </a>
+
       <a href="https://kick.com/odedsvr" target="_blank" class="card card-kick block rounded-2xl p-5 text-center">
         <div class="text-xl font-black text-green-400">
           <img src="https://github.com/OdedSVR/images/blob/main/kick%20logo.png?raw=true" alt="Kick" class="inline-block h-8 w-8 align-middle mr-2">
@@ -216,7 +226,7 @@
     </div>
 
     <footer class="mt-16 text-xs text-white/40 font-bold text-center">
-      © 2026 OdedSVR
+      © 2026 OdedSVR | Created by Piker_r
     </footer>
   </div>
 
@@ -243,8 +253,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
