--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </a>
 
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaHZPxcokcBjHytidZ-Uv16gZh_ennrWugAk3Mz18CUP3y4A/viewform" target="_blank" class="card card-pink block rounded-2xl p-5 text-center">
-        <div class="text-xl font-black text-pink-400">🎥 ?רוצים לנהל את הערוץ יוטיוב של אבני 🎥</div>
+        <div class="text-xl font-black text-pink-400">🎥?OdedSVR live רוצים לנהל את הערוץ 🎥</div>
         <span class="text-pink-300 text-[10px] font-bold px-2 py-1 rounded-lg">!אבני מתגייס ומחפש מישהו שינהל את הערוץ שלו, לחצו להרשמה</span>
       </a>
 
@@ -253,3 +253,4 @@
   </script>
 </body>
 </html>
+
