--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ODED SVR | Official Links</title>
+  <title>OdedSVR | Official Links</title>
  <link rel="icon" type="image/png" href="https://github.com/OdedSVR/images/blob/main/ODEDLL.png?raw=true">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -253,4 +253,5 @@
   </script>
 </body>
 </html>
+
 
